impls/monero_rust/src/bindings.rs

extern "C" {
    pub fn MONERO_Wallet_store(
        wallet_ptr: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_filename(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_keysFilename(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_init(
        wallet_ptr: *mut ::std::os::raw::c_void,
        daemon_address: *const ::std::os::raw::c_char,
        upper_transaction_size_limit: u64,
        daemon_username: *const ::std::os::raw::c_char,
        daemon_password: *const ::std::os::raw::c_char,
        use_ssl: bool,
        lightWallet: bool,
        proxy_address: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_createWatchOnly(
        wallet_ptr: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
        language: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_setRefreshFromBlockHeight(
        wallet_ptr: *mut ::std::os::raw::c_void,
        refresh_from_block_height: u64,
    );
}
extern "C" {
    pub fn MONERO_Wallet_getRefreshFromBlockHeight(wallet_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_setRecoveringFromSeed(
        wallet_ptr: *mut ::std::os::raw::c_void,
        recoveringFromSeed: bool,
    );
}
extern "C" {
    pub fn MONERO_Wallet_setRecoveringFromDevice(
        wallet_ptr: *mut ::std::os::raw::c_void,
        recoveringFromDevice: bool,
    );
}
extern "C" {
    pub fn MONERO_Wallet_setSubaddressLookahead(
        wallet_ptr: *mut ::std::os::raw::c_void,
        major: u32,
        minor: u32,
    );
}
extern "C" {
    pub fn MONERO_Wallet_connectToDaemon(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_connected(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_Wallet_setTrustedDaemon(wallet_ptr: *mut ::std::os::raw::c_void, arg: bool);
}
extern "C" {
    pub fn MONERO_Wallet_trustedDaemon(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_setProxy(
        wallet_ptr: *mut ::std::os::raw::c_void,
        address: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_balance(wallet_ptr: *mut ::std::os::raw::c_void, accountIndex: u32)
        -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_unlockedBalance(
        wallet_ptr: *mut ::std::os::raw::c_void,
        accountIndex: u32,
    ) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_viewOnlyBalance(
        wallet_ptr: *mut ::std::os::raw::c_void,
        accountIndex: u32,
    ) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_watchOnly(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_isDeterministic(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_blockChainHeight(wallet_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_approximateBlockChainHeight(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_estimateBlockChainHeight(wallet_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_daemonBlockChainHeight(wallet_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_daemonBlockChainHeight_cached(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_daemonBlockChainHeight_runThread(
        wallet_ptr: *mut ::std::os::raw::c_void,
        seconds: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn MONERO_Wallet_daemonBlockChainTargetHeight(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_synchronized(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_displayAmount(amount: u64) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_amountFromString(amount: *const ::std::os::raw::c_char) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_amountFromDouble(amount: f64) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_genPaymentId() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_paymentIdValid(paiment_id: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_addressValid(
        str_: *const ::std::os::raw::c_char,
        nettype: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_keyValid(
        secret_key_string: *const ::std::os::raw::c_char,
        address_string: *const ::std::os::raw::c_char,
        isViewKey: bool,
        nettype: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_keyValid_error(
        secret_key_string: *const ::std::os::raw::c_char,
        address_string: *const ::std::os::raw::c_char,
        isViewKey: bool,
        nettype: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_paymentIdFromAddress(
        strarg: *const ::std::os::raw::c_char,
        nettype: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_maximumAllowedAmount() -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_init3(
        wallet_ptr: *mut ::std::os::raw::c_void,
        argv0: *const ::std::os::raw::c_char,
        default_log_base_name: *const ::std::os::raw::c_char,
        log_path: *const ::std::os::raw::c_char,
        console: bool,
    );
}
extern "C" {
    pub fn MONERO_Wallet_getPolyseed(
        wallet_ptr: *mut ::std::os::raw::c_void,
        passphrase: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_createPolyseed(
        language: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_startRefresh(wallet_ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn MONERO_Wallet_pauseRefresh(wallet_ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn MONERO_Wallet_refresh(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_refreshAsync(wallet_ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn MONERO_Wallet_rescanBlockchain(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_rescanBlockchainAsync(wallet_ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn MONERO_Wallet_setAutoRefreshInterval(
        wallet_ptr: *mut ::std::os::raw::c_void,
        millis: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn MONERO_Wallet_autoRefreshInterval(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_Wallet_addSubaddressAccount(
        wallet_ptr: *mut ::std::os::raw::c_void,
        label: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_Wallet_numSubaddressAccounts(wallet_ptr: *mut ::std::os::raw::c_void) -> usize;
}
extern "C" {
    pub fn MONERO_Wallet_numSubaddresses(
        wallet_ptr: *mut ::std::os::raw::c_void,
        accountIndex: u32,
    ) -> usize;
}
extern "C" {
    pub fn MONERO_Wallet_addSubaddress(
        wallet_ptr: *mut ::std::os::raw::c_void,
        accountIndex: u32,
        label: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_Wallet_getSubaddressLabel(
        wallet_ptr: *mut ::std::os::raw::c_void,
        accountIndex: u32,
        addressIndex: u32,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_setSubaddressLabel(
        wallet_ptr: *mut ::std::os::raw::c_void,
        accountIndex: u32,
        addressIndex: u32,
        label: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_Wallet_multisig(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Wallet_getMultisigInfo(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_makeMultisig(
        wallet_ptr: *mut ::std::os::raw::c_void,
        info: *const ::std::os::raw::c_char,
        info_separator: *const ::std::os::raw::c_char,
        threshold: u32,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_exchangeMultisigKeys(
        wallet_ptr: *mut ::std::os::raw::c_void,
        info: *const ::std::os::raw::c_char,
        info_separator: *const ::std::os::raw::c_char,
        force_update_use_with_caution: bool,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_exportMultisigImages(
        wallet_ptr: *mut ::std::os::raw::c_void,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_importMultisigImages(
        wallet_ptr: *mut ::std::os::raw::c_void,
        info: *const ::std::os::raw::c_char,
        info_separator: *const ::std::os::raw::c_char,
    ) -> usize;
}
extern "C" {
    pub fn MONERO_Wallet_hasMultisigPartialKeyImages(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> usize;
}
extern "C" {
    pub fn MONERO_Wallet_restoreMultisigTransaction(
        wallet_ptr: *mut ::std::os::raw::c_void,
        signData: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Wallet_createTransactionMultDest(
        wallet_ptr: *mut ::std::os::raw::c_void,
        dst_addr_list: *const ::std::os::raw::c_char,
        dst_addr_list_separator: *const ::std::os::raw::c_char,
        payment_id: *const ::std::os::raw::c_char,
        amount_sweep_all: bool,
        amount_list: *const ::std::os::raw::c_char,
        amount_list_separator: *const ::std::os::raw::c_char,
        mixin_count: u32,
        pendingTransactionPriority: ::std::os::raw::c_int,
        subaddr_account: u32,
        preferredInputs: *const ::std::os::raw::c_char,
        preferredInputs_separator: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Wallet_createTransaction(
        wallet_ptr: *mut ::std::os::raw::c_void,
        dst_addr: *const ::std::os::raw::c_char,
        payment_id: *const ::std::os::raw::c_char,
        amount: u64,
        mixin_count: u32,
        pendingTransactionPriority: ::std::os::raw::c_int,
        subaddr_account: u32,
        preferredInputs: *const ::std::os::raw::c_char,
        separator: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Wallet_loadUnsignedTx(
        wallet_ptr: *mut ::std::os::raw::c_void,
        unsigned_filename: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Wallet_loadUnsignedTxUR(
        wallet_ptr: *mut ::std::os::raw::c_void,
        input: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Wallet_submitTransaction(
        wallet_ptr: *mut ::std::os::raw::c_void,
        fileName: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_submitTransactionUR(
        wallet_ptr: *mut ::std::os::raw::c_void,
        input: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_hasUnknownKeyImages(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_exportKeyImages(
        wallet_ptr: *mut ::std::os::raw::c_void,
        filename: *const ::std::os::raw::c_char,
        all: bool,
    ) -> bool;
}
